# datasette-edit-schema

./: README.md  pyproject.toml  setup.py  update-screenshot.sh
.github/workflows/: publish.yml  test.yml
datasette_edit_schema/: __init__.py  utils.py
datasette_edit_schema/static/: draggable.1.0.0-beta.11.bundle.js  draggable.1.0.0-beta.11.bundle.min.js
datasette_edit_schema/templates/: edit_schema_create_table.html  edit_schema_database.html  edit_schema_index.html  edit_schema_table.html
datasette_edit_tables/: __init__.py  app.py
datasette_edit_tables/templates/: edit_tables_database.html  edit_tables_index.html  edit_tables_table.html
tests/: conftest.py  test_edit_schema.py  test_edit_tables.py
